# shiroa

./: .gitattributes  .gitignore  .gitmodules  .typstignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: ci.yaml  docker.yaml  gh_pages.yml  lint_pr_title.yml  release.yaml  release.yml  release_with_artifact.yaml  releast-typst.yml
CHANGELOG/: CHANGELOG-0.1.md  CHANGELOG-0.2.md  CHANGELOG-0.3.md  CHANGELOG-0.4.md  README.md
assets/extra-fonts/: .gitignore
assets/fonts/: .gitignore
cli/: Cargo.toml  build.rs
cli/src/: args.rs  book.rs  commands.rs  compile.rs  diag.rs  error.rs  font.rs  lib.rs  main.rs  meta.rs  outline.rs  project.rs  render.rs  search.rs  serve.rs  summary.rs  theme.rs  tui.rs  utils.rs  version.rs
cli/src/book/: meta.rs  outline.rs
cli/src/commands/: init.rs  serve.rs
cli/src/project/: assets.rs  compile.rs  meta.rs  release.rs  watch.rs
cli/src/render/: html.rs  mod.rs  search.rs  typst.rs
cli/src/render/helpers/: mod.rs  toc.rs
contrib/typst/: book.typ  gh-ebook.typ  gh-pages.typ  i18n.typ  summary.typ
contrib/typst/book/: lib.typ  sys.typ  typst.toml
contrib/typst/tidy-book/: lib.typ
frontend/: .gitignore  package.json  tsconfig.json  vite.config.js
frontend/src/: global.d.ts  main.ts  svg_utils.cjs
github-pages/: book.toml
github-pages/docs/: book.toml  book.typ  get-started.typ  installation.typ  introduction.typ  pdf.typ  summary.typ  supports.typ  template.typ
github-pages/docs/cli/: build.typ  clean.typ  completions.typ  init.typ  main.typ  serve.typ
github-pages/docs/format/: book-meta.typ  book.typ  build-meta.typ  main.typ  supports.typ  theme.typ
github-pages/docs/format/supports/: cross-ref-sample.typ  cross-ref.typ  embed-html.typ  multimedia.typ  sema-desc.typ
github-pages/docs/guide/: faq.typ  get-started.typ  installation.typ
github-pages/docs/locale/zh_CN/: introduction.typ
github-pages/docs/locale/zh_CN/format/: book-meta.tr.typ  book-meta.typ
github-pages/docs/supports/: cross-ref-sample.typ  cross-ref.typ  embed-html.typ  multimedia.typ  render-test.typ  sema-desc.typ
refs/paged/: example-shiroa-docs.hash
scripts/: draft-release.mjs  release-preflight.mjs
tests/: .gitignore
tests/minimal/: book.typ  chapter1.typ  template.typ
tests/missing-site-title/: book.typ  chapter.typ  template.typ
themes/mdbook/: head.typ  header.hbs  html.typ  icons.typ  index.hbs  index.js  index.typ  lib.typ  mod.typ  page-sidebar.typ  page.typ  typst-load-trampoline.hbs  typst.toml
themes/mdbook/css/: chrome.css  general.css
themes/mdbook/legacy/: typst-load-html-trampoline.hbs
themes/starlight/: content-panel.typ  head.hbs  head.typ  html.typ  icons.typ  index.hbs  index.typ  lib.typ  main.typ  mod.typ  page-header.typ  page-main.typ  page-right-sidebar.typ  page-sidebar-mobile.typ  page-sidebar.typ  page.typ  site-search-results.typ  social-icons.typ  table-of-contents.typ  theme-select.typ  typst-load-trampoline.hbs  typst.toml
themes/starlight/FontAwesome/css/: font-awesome.css
themes/starlight/css/: chrome.css  general.css
themes/starlight/styles/: markdown.css  props.css  reset.css  utils.css
themes/typst-book/: index.hbs  index.html
tools/build-from-source/: Cargo.toml
tools/build-from-source/src/: main.rs
tools/i18n/: Cargo.toml
tools/i18n/src/: main.rs
