[workspace.package]
description = "A simple tool for creating modern online books in pure typst."
authors = ["shiroa Developers"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Myriad-Dreamin/shiroa"
repository = "https://github.com/Myriad-Dreamin/shiroa"


[workspace]
resolver = "2"
members = ["cli", "tools/build-from-source"]

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
opt-level = 3
panic = "abort"   # Abort on panic

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]

typst = "0.12.0"
typst-assets = "0.12.0"
reflexo-typst = { version = "0.5.4" }
reflexo-vec2svg = { version = "0.5.4", features = ["experimental-ligature"] }

handlebars = "6.3.0"

# general
anyhow = "1"
comemo = "0.4"
tokio = { version = "1.42", features = ["full"] }

# cryptography and processing
serde = { version = "1" }
serde_json = "1"
toml = "0.8"

# web
warp = { version = "0.3", features = ["compression"] }

# cli
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
clap_complete_fig = "4.5"

# logging and tracing
env_logger = "0.11"
log = "0.4.25"

# misc
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "1.0.1" }
include_dir = "0.7.3"
pathdiff = "0.2.1"

[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst", tag = "typst.ts/v0.5.0-rc9" }

# reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "c52a054ca31989e13eddc6f2cffb6db2ba5faa5d", package = "reflexo-vec2svg" }
# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "c52a054ca31989e13eddc6f2cffb6db2ba5faa5d", package = "reflexo-typst" }

# typst = { path = "../typst/crates/typst" }
# typst-syntax = { path = "../typst/crates/typst-syntax" }
# reflexo-vec2svg = { path = "../typst.ts/crates/conversion/vec2svg" }
# reflexo-typst = { path = "../typst.ts/crates/reflexo-typst" }
