[workspace.package]
description = "A simple tool for creating modern online books in pure typst."
authors = ["shiroa Developers"]
version = "0.3.1-rc3"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Myriad-Dreamin/shiroa"
repository = "https://github.com/Myriad-Dreamin/shiroa"


[workspace]
resolver = "2"
members = ["cli", "tools/build-from-source"]

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
opt-level = 3
panic = "abort"   # Abort on panic

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]

typst = "0.13.0"
typst-eval = "0.13.0"
typst-assets = "0.13.0"
# typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }
reflexo-typst = { version = "0.6.0", features = ["html"] }
reflexo-vec2svg = { version = "0.6.0", features = ["experimental-ligature"] }
tinymist-task = { version = "0.13.12" }

handlebars = "6.3.0"

# general
anyhow = "1"
comemo = "0.4"
tokio = { version = "1.42", features = ["full"] }
rayon = "1"
indexmap = "2"
url = "2"

# cryptography and processing
serde = { version = "1" }
serde_json = "1"
toml = "0.8"
regex = "1.8.1"

# web
warp = { version = "0.3", features = ["compression"] }

# cli
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
clap_complete_fig = "4.5"
termcolor = "1"
codespan-reporting = "0.11"

# logging and tracing
env_logger = "0.11"
log = "0.4.25"

# search
elasticlunr-rs = "3.0.2"

# misc
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "1.0.1" }
include_dir = "0.7.3"
pathdiff = "0.2.1"

[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-html = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-render = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "typst.ts/v0.6.0" }
# typst-assets = { git = "https://github.com/typst/typst-assets", rev = "8cccef9" }

# reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "0eee46894a09a4da5caff1610a3c99e8552bce86" }
# reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "0eee46894a09a4da5caff1610a3c99e8552bce86" }

typst-shim = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-derive = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-std = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-task = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-package = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-world = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }
tinymist-project = { git = "https://github.com/Myriad-Dreamin/tinymist.git", rev = "0191e559789f313ad73610e8d173862ab801c47c" }

# typst = { path = "../typst/crates/typst" }
# typst-syntax = { path = "../typst/crates/typst-syntax" }
# reflexo-vec2svg = { path = "../typst.ts/crates/conversion/vec2svg" }
# reflexo-typst = { path = "../typst.ts/crates/reflexo-typst" }

# comemo = { path = "../comemo" }
# typst = { path = "../typst/crates/typst" }
# typst-syntax = { path = "../typst/crates/typst-syntax" }
# typst-render = { path = "../typst/crates/typst-render" }
# typst-svg = { path = "../typst/crates/typst-svg" }
# typst-pdf = { path = "../typst/crates/typst-pdf" }
# typst-eval = { path = "../typst/crates/typst-eval" }
# typst-html = { path = "../typst/crates/typst-html" }

# fontdb = { path = "../fontdb" }

# [patch."https://github.com/Myriad-Dreamin/tinymist.git"]
# typst-shim = { path = "../tinymist/crates/typst-shim" }
# tinymist-analysis = { path = "../tinymist/crates/tinymist-analysis" }
# tinymist-std = { path = "../tinymist/crates/tinymist-std" }
# tinymist-task = { path = "../tinymist/crates/tinymist-task" }
# tinymist-world = { path = "../tinymist/crates/tinymist-world" }
