[package]
name = "shiroa"
description = "Command line tool for shiroa."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "shiroa"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false

[dependencies]

clap.workspace = true
clap_complete.workspace = true
clap_complete_fig.workspace = true
codespan-reporting.workspace = true
comemo.workspace = true
elasticlunr-rs.workspace = true
env_logger.workspace = true
handlebars.workspace = true
indexmap.workspace = true
include_dir.workspace = true
log.workspace = true
pathdiff.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
termcolor.workspace = true
toml.workspace = true
tokio.workspace = true
url.workspace = true
warp.workspace = true

reflexo-typst = { workspace = true, features = [
    "dynamic-layout",
    "svg",
    "system",
] }
reflexo-vec2svg.workspace = true
tinymist-task.workspace = true
typst.workspace = true
typst-assets = { workspace = true }

[build-dependencies]
anyhow.workspace = true
vergen.workspace = true
vergen-gitcl.workspace = true

[features]
embedded-fonts = ["typst-assets/fonts"]
default = ["embedded-fonts"]
